# isopipe

./: .gitmodules
isopipe/: Cargo.toml  config.toml
isopipe/assets/: correct_minimap.py  execute_joblist.nf  filter_minimap_qual.perl
isopipe/assets/orf/: orf_tree_pipe.py
isopipe/assets/orf/bedutils/: bed.py
isopipe/assets/orf/nextflow/: chunked_diamond.nf  chunked_translationai.nf  nextflow.config
isopipe/assets/orf/utils/: blast_prep.py  common.py  merging.py  overrules.py  toga_prep.py  translationai_prep.py
isopipe/src/: cli.rs  config.rs  consts.rs  core.rs  lib.rs  main.rs
isopipe/src/core/: ccs.rs  isoseq.rs  isotools.rs  lima.rs  minimap.rs  orf.rs  pbindex.rs  polya.rs  samtools.rs
isopipe/src/executor/: job.rs  manager.rs
